Fix thumb scale issue, guesses not showing up, add logout button to feed, make next page work.

--- a/helpings/helpings/WebContent/feed.css
+++ b/helpings/helpings/WebContent/feed.css
@@ -163,3 +163,10 @@ input[type=text], input[type=password] {
 	float: right;
 	margin-right: 25px;
 }
+
+#nextbutton {
+	margin-left: 100px;
+	margin-top: 40px;
+	padding-top: 40px;
+	padding-bottom: 10px;
+}
